samples/_failures_safe/1761668699_efce41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1806c4ac.c: In function ‘main’:
./samples/SAFE/__tmp_1806c4ac.c:154:13: error: expected declaration or statement at end of input
  154 |             return EXIT_FAILURE;
      |             ^~~~~~
./samples/SAFE/__tmp_1806c4ac.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1806c4ac.c:154:13: error: expected declaration or statement at end of input
